--- a/style.css
+++ b/style.css
@@ -195,6 +195,11 @@ button:focus {
   outline: none;
 }
 
+.emoji.selected {
+  box-shadow: 0 0 0 3px #ffd700;
+  background: #fffbe6;
+}
+
 /* Emoji Results Text */
 #emojiResults {
   margin-top: 1rem;
